2001-10-31  Zbigniew Chyla  <cyba@gnome.pl>

	* gconf/gconf-internals.c (gconf_activate_server): Plug leak.

2001-10-30  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* backends/val-encode.c: add missing headers to remove
	some warnings.

2001-10-29  jacob berkman  <jacob@ximian.com>

	* gconf-editor/gconf-editor.c (main): bind to GETTEXT_PACKAGE
	rather than PACKAGE

	* autogen.sh: call glib-gettextize

	* configure.in: set the GETTEXT_PACKAGE to be more like the gnome
	1 one

2001-10-30  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: When probing for db3, check libdb-3.3, libdb-3.2 and
	  libdb-3.1 in addition to libdb-3 .

2001-10-16  Ross Golder  <ross@golder.org>

	* gconf.spec.in: updated installation paths

2001-10-15  Havoc Pennington  <hp@redhat.com>

	* gconf/gconftool.c (main): don't create config daemon for
	--get-default-source
	(main): shut down daemon in makefile install mode

2001-10-14  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump version, increment GCONF_CURRENT
	and GCONF_AGE due to API additions

2001-10-13  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: allow for db3 headers/includes installed in a
	strange location.
	* backends/Makefile.am: add BDB_CFLAGS to INCLUDES.
	
2001-10-12  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* gconf/gconf.c (gconf_engine_set): check UTF-8 validity here,
	instead of at the higher levels	

	* gconf/gconf-value.c (gconf_value_validate): new internal function

2001-10-12  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* tests/testschemas.c (check_schema_storage): add some UTF-8

	* tests/testpersistence.c: UTF-8 test

	* tests/testgconf.c: add a UTF-8 test

	* gconf/gconf.c: UTF-8 checks, and some indentation

	* gconf/gconf-schema.c: UTF-8 checks

	* gconf/gconf-value.c: add some UTF-8 robustness

2001-10-12  Havoc Pennington  <hp@redhat.com>

        Merging from stable.
	
	* backends/xml-entry.c (entry_unset_value): don't translate "%s"
