@@ -58,6 +58,7 @@ static int long_docs_mode = FALSE;
 static int schema_name_mode = FALSE;
 static int associate_schema_mode = FALSE;
 static int default_source_mode = FALSE;
+static int recursive_unset_mode = FALSE;
 
 struct poptOption options[] = {
   { 
@@ -104,6 +105,15 @@ struct poptOption options[] = {
     &unset_mode,
     0, 
     N_("Unset the keys on the command line"),
+    NULL
+  },
+  {
+    "recursive-unset",
+    '\0',
+    POPT_ARG_NONE,
+    &recursive_unset_mode,
+    0, 
+    N_("Recursively unset all keys at or below the key/directory names on the command line"),
     NULL
   },
   { 
@@ -355,6 +365,7 @@ static int do_set(GConfEngine* conf, const gchar** args);
 static int do_set_schema(GConfEngine* conf, const gchar** args);
 static int do_all_entries(GConfEngine* conf, const gchar** args);
 static int do_unset(GConfEngine* conf, const gchar** args);
+static int do_recursive_unset (GConfEngine* conf, const gchar** args);
 static int do_all_subdirs(GConfEngine* conf, const gchar** args);
 static int do_load_schema_file(GConfEngine* conf, const gchar* file);
 static int do_short_docs (GConfEngine *conf, const gchar **args);
@@ -517,6 +528,7 @@ main (int argc, char** argv)
       return 1;
     }
 
+  /* FIXME not checking that --recursive-unset is used alone */
   
   if (use_local_source && config_source == NULL)
     {
@@ -757,6 +769,17 @@ main (int argc, char** argv)
         }
     }
 
+  if (recursive_unset_mode)
+    {
+      const gchar** args = poptGetArgs(ctx);
+
+      if (do_recursive_unset(conf, args) == 1)
+        {
+          gconf_engine_unref(conf);
+          return 1;
+        }
+    }
+  
   if (all_subdirs_mode)
     {
       const gchar** args = poptGetArgs(ctx);
@@ -1540,6 +1563,112 @@ do_unset(GConfEngine* conf, const gchar** args)
   return 0;
 }
 
+static void
+recursive_unset_helper (GConfEngine *conf,
+                        const char  *key)
+{
+  GError* err = NULL;
+  GSList* subdirs;
+  GSList* entries;
+  GSList* tmp;
+
+  err = NULL;
+  
+  subdirs = gconf_engine_all_dirs (conf, key, &err);
+          
+  if (subdirs != NULL)
+    {
+      tmp = subdirs;
+
+      while (tmp != NULL)
+        {
+          gchar* s = tmp->data;
+
+          recursive_unset_helper (conf, s);
+          
+          g_free (s);
+
+          tmp = g_slist_next (tmp);
+        }
+
+      g_slist_free (subdirs);
+    }
+  else
+    {
+      if (err != NULL)
+        {
+          fprintf (stderr, _("Error listing subdirs of '%s': %s\n"),
+                   key, err->message);
+          g_error_free(err);
+          err = NULL;
+        }
+    }
+
+  entries = gconf_engine_all_entries (conf, key, &err);
+          
+  if (err != NULL)
+    {
+      fprintf (stderr, _("Failure listing entries in '%s': %s\n"),
+               key, err->message);
+      g_error_free(err);
+      err = NULL;
+    }
+
+  if (entries != NULL)
+    {
+      tmp = entries;
+
+      while (tmp != NULL)
+        {
+          GConfEntry* entry = tmp->data;
+          
+          gconf_engine_unset (conf,
+                              gconf_entry_get_key (entry),
+                              &err);
+          if (err != NULL)
+            {
+              fprintf (stderr, _("Error unsetting '%s': %s\n"),
+                       gconf_entry_get_key (entry), err->message);
+              g_error_free (err);
+              err = NULL;
+            }
+          
+          gconf_entry_free (entry);
+
+          tmp = g_slist_next (tmp);
+        }
+
+      g_slist_free (entries);
+    }
+
+  gconf_engine_unset (conf, key, &err);
+  if (err != NULL)
+    {
+      fprintf (stderr, _("Error unsetting '%s': %s\n"),
+               key, err->message);
+      g_error_free (err);
+      err = NULL;
+    }
+}
+
+static int
+do_recursive_unset (GConfEngine* conf, const gchar** args)
+{
+  if (args == NULL)
+    {
+      fprintf(stderr, _("Must specify one or more keys to recursively unset.\n"));
+      return 1;
+    }  
+      
+  while (*args)
+    {
+      recursive_unset_helper (conf, *args);
+      
+      ++args;
+    }
+
+  return 0;
+}
 
 static int
 do_all_subdirs(GConfEngine* conf, const gchar** args)
