@@ -1,3 +1,7 @@
+2001-10-31  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconftool.c: add --recursive-unset command line option
+
 2001-10-31  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* gconf/gconf-internals.c (gconf_activate_server): Plug leak.
